buildscript {
    repositories {
        maven {
            url = uri("https://plugins.gradle.org/m2/")
        }
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:3.2.2")
    }

}

plugins {
    id 'org.springframework.boot' version '3.2.2'
    id 'java'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

ext {
    set('tomcat.version', '10.1.18')
}


apply plugin: "io.spring.dependency-management"
apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: "org.springframework.boot"
apply plugin: 'application'

mainClassName = 'org.flamierawieo.anirandom.Anirandom'



jar {
    version =  '0.1.0'
    manifest {
        attributes "Main-Class": "$mainClassName"
    }
}

repositories {
    mavenCentral()
}

sourceCompatibility = '17'
targetCompatibility = '17'

dependencies {
    implementation 'jakarta.servlet:jakarta.servlet-api:4.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.2.2'
    implementation 'org.springframework.security:spring-security-crypto:6.0.0'
    implementation group: 'com.mitchellbosecke', name: 'pebble', version: '2.2.1'
    implementation 'com.googlecode.json-simple:json-simple:1.1'
    implementation 'org.mongodb:mongo-java-driver:3.12.14'
    implementation 'org.mongodb.morphia:morphia:1.1.0'
    implementation 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'junit:junit:4.13.2'
}

task staticResources(type: Copy) {
    from 'node_modules/baconjs/dist/Bacon.min.js'
    from 'node_modules/jquery/dist/jquery.min.js'
    from 'node_modules/sweetalert/dist/sweetalert.min.js'
    from 'node_modules/sweetalert/dist/sweetalert.css'
    into 'build/resources/main/static/'
}


run {
    jvmArgs = ['-Dspring.config.name=application.properties',
               '--add-opens', 'java.base/java.util=ALL-UNNAMED',
               '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
               '--add-opens', 'java.base/java.text=ALL-UNNAMED',
               '--add-opens', 'java.desktop/java.awt.font=ALL-UNNAMED',
               '--add-opens', 'java.base/java.lang=ALL-UNNAMED']

}

bootRun {
    jvmArgs = ['-Dspring.config.name=application.properties']
}